@@ -1,3 +1,8 @@
+2004-12-17  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/17821
+	* g++.dg/lookup/conv-5.C: New.
+
 2004-12-16  Ziemowit Laski  <zlaski@apple.com>
 
 	* objc.dg/stabs-1.m: New test.
